--- a/vm/1/index.html
+++ b/vm/1/index.html
@@ -35,15 +35,45 @@
     <!-- Begin slides. Just make elements with a class of slide. -->
 
     <section class="slide">
-      <h1>Slide</h1>
+      <h1>Bytecode VMs</h1>
+      
     </section>
 
     <section class="slide">
-      <h1>Content</h1>
+      <h2>Rough kinds</h2>
+      <ul>
+        <li>For a specific language</li>
+        <li>As a layer of an application or part of an API</li>
+        <li>'General' runtimes</li>
+      </ul>
     </section>
 
     <section class="slide">
-      <h1>Here</h1>
+      <h2>For a specific language</h2>
+      <ul>
+        <li>Python CPython, Ruby MRI/Rubinius, Perl, Lua, Flash Tamarin, JS V8 etc, even PHP (kindof)</li>
+        <li>(Usually) an evolution, after starting as (usually) an AST walking interpreter</li>
+        <li>Better risk/reward than writing a compiler that targets raw machine code</li>
+      </ul>
+    </section>
+
+    <section class="slide">
+      <h2>As a layer of an application or part of an API</h2>
+      <ul>
+        <li>Z-machine (Infocom)</li>
+        <li>The Lost Vikings</li>
+        <li>JS template rendering library '<a href="https://www.linkedin.com/pulse/glimmers-optimizing-compiler-chad-hietala/">Glimmer</a>'</li>
+      </ul>
+    </section>
+
+    <section class="slide">
+      <h2>As a layer of an application or part of an API</h2>
+      <p>Some </p>
+      <ul>
+        <li>I wrote an opengl based UI toolkit which was mostly a bytecode VM whose bytecodes were rendering tasks</li>
+        <li>In fact, lots of rendering middleware uses this approach - Apple's Metal APIs, for example.</li>
+        <li>SPIRV for Vulkan is even more this.</li>
+      </ul>
     </section>
 
     <!-- End slides. -->
