--- a/vm/1/index.html
+++ b/vm/1/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=1024, user-scalable=no">
 
-  <title>Your deck.js Presentation</title>
+  <title>Bytecode VMs????????</title>
 
   <!-- Required stylesheet -->
   <link rel="stylesheet" media="screen" href="core/deck.core.css">
@@ -102,6 +102,32 @@
       <h2> Conclusion??? </h2>
       <p> We are reimplementing things again and again and again. Many foundational projects are MLOC balls of C++. The cost to implement some of these things is astronomical. It takes a number of cycles for things to make it into the mainstream.</p>
       <p> There are things in the Self and Strongtalk VMs that we still have trouble implementing in smaller projects today. </p>
+    </section>
+
+    <section class="slide">
+      <h1>Personal anecdote</h1>
+    </section>
+
+    <section class="slide">
+      <h1>Deep time</h1>
+    </section>
+
+    <section class="slide">
+      <h1>What I want</h1>
+    </section>
+
+    <section class="slide">
+      <h2>Implications</h2>
+      <ul>
+        <li>Polymorphic Row types</li>
+        <li>Type system - Cubical Type Theory</li>
+        <li>Explicit quantifiers</li>
+      </ul>
+    </section>
+
+    <section class="slide">
+      <h2>Quantifiers?</h2>
+      <p>∀ ∃ Π Σ ı λ μ ν Ϙ 𐌎</p>
     </section>
 
     <!-- End slides. -->
