--- a/vm/1/index.html
+++ b/vm/1/index.html
@@ -105,11 +105,23 @@
     </section>
 
     <section class="slide">
+      <h1>Company anecdote</h1>
+    </section>
+
+    <section class="slide">
       <h1>Personal anecdote</h1>
     </section>
 
     <section class="slide">
+      <h1>Delphin anecdote</h1>
+    </section>
+
+    <section class="slide">
       <h1>Deep time</h1>
+    </section>
+
+    <section class="slide">
+      <h1>ARM</h1>
     </section>
 
     <section class="slide">
@@ -128,6 +140,32 @@
     <section class="slide">
       <h2>Quantifiers?</h2>
       <p>∀ ∃ Π Σ ı λ μ ν Ϙ 𐌎</p>
+    </section>
+
+    <section class="slide">
+      <h2>Implications</h2>
+      <ul>
+        <li>Polymorphic Row types</li>
+        <li>Type system - Cubical Type Theory</li>
+        <li>Explicit quantifiers</li>
+        <li>Reasonably developed MOP, VM interface</li>
+        <li>Basic Block Versioning</li>
+        <li>Staged computation</li>
+      </ul>
+    </section>
+
+    <section class="slide">
+      <h2>Takeaways</h2>
+      <ul>
+        <li class="slide">Unless you are 1990's era Sun, have a plan and a scope</li>
+        <li class="slide">VM development is not self sustaining - you need something else to provide the fuel</li>
+        <li class="slide">Bytecode VMs are a good solution to a wide range of problems, with a dense literature you can tap into</li>
+      </ul>
+    </section>
+
+    <section class="slide">
+      <h2>Hook!</h2>
+      <p>j.marsh@auckland.ac.nz</p>
     </section>
 
     <!-- End slides. -->
